catkin_ws/logs/iq_gnc/build.make.219.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_globalPos_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:162:4: error: ‘current_globalPos’ was not declared in this scope
  162 |    current_globalPos.publish(current_global_position);
      |    ^~~~~~~~~~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:228:27: error: ‘controlnode’ was not declared in this scope
  228 |       current_globalPos = controlnode.advertise<nav_msgs::Odometry>((ros_namespace + "/mavros/global_position/local").c_str(), 10, drone1_globalPos_cb);
      |                           ^~~~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:228:67: error: expected primary-expression before ‘>’ token
  228 |       current_globalPos = controlnode.advertise<nav_msgs::Odometry>((ros_namespace + "/mavros/global_position/local").c_str(), 10, drone1_globalPos_cb);
      |                                                                   ^
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
